cabal-version:       >=1.10

name:                hask-hex
version:             0.1.0.0
synopsis:            fun
-- description:
homepage:            hex.gran.world
-- bug-reports:
license:             GPL-3
-- license-file:        LICENSE
author:              kjetil midtlie
maintainer:          kjetil.midtlie@gmail.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Colors
                       InfiniteHexGrid
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hask-hex
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       hask-hex,
                       random,
                       containers
  -- hs-source-dirs:
  default-language:    Haskell2010
