cabal-version:       >=1.10

name:                hask-hex
version:             0.1.0.0
synopsis:            fun
-- description:
homepage:            hex.gran.world
-- bug-reports:
license:             GPL-3
-- license-file:        LICENSE
author:              kjetil midtlie
maintainer:          kjetil.midtlie@gmail.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     InfiniteHexGrid
                       FiniteHexGrid
                       Materials
                       Utils
  build-depends:       base,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hask-hex
  main-is:             Main.hs
  build-depends:       base,
                       hask-hex,
                       random,
                       containers
  default-language:    Haskell2010

executable term-inf
  main-is:             TermInf.hs
  build-depends:       base,
                       text,
                       hask-hex,
                       terminal-size

executable hask-hex-simplex
  main-is:             SimpleUI.hs
  build-depends:       base,
                       hask-hex,
                       random,
                       terminal-size,
                       containers
  default-language:    Haskell2010

executable tui-hask-hex
  main-is:             Tui.hs
  build-depends:       base,
                       hask-hex,
                       brick,
                       vty,
                       random,
                       containers
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  -- hs-source-dirs:
  default-language:    Haskell2010
