cabal-version:       >=1.10

name:                hask-hex
version:             0.1.0.0
synopsis:            fun
-- description:
homepage:            hex.gran.world
-- bug-reports:
license:             GPL-3
-- license-file:        LICENSE
author:              kjetil midtlie
maintainer:          kjetil.midtlie@gmail.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     InfiniteHexGrid
                       --FiniteHexGrid
                       VectorGridPattern
                       Materials
                       Utils
  build-depends:       base,
                       random,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable term-inf
  main-is:             TermInf.hs
  build-depends:       base,
                       text,
                       hask-hex,
                       terminal-size

executable hask-hex-simplex
  main-is:             SimpleUI.hs
  build-depends:       base,
                       hask-hex,
                       random,
                       containers,
                       vector,
                       ansi-terminal
  default-language:    Haskell2010


--executable tui-hask-hex
--  main-is:             Tui.hs
--  build-depends:       base,
--                       hask-hex,
--                       brick,
--                       vty,
--                       random,
--                       containers
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N


  -- hs-source-dirs:
  default-language:    Haskell2010
